--- a/data/reviews/life-is-strange.mdx
+++ b/data/reviews/life-is-strange.mdx
@@ -1,5 +1,5 @@
 ---
-title: The Last of Us Part II
+title: Life is Strange
 subtitle: Emotionally Shattering Journey
 excerpt: An emotionally shattering, thrilling adventure with a stunning and nuanced exploration of the strength and fragility of the human spirit.
 ratingScore: 10
