--- a/data/reviews/red-dead-redemption-2.mdx
+++ b/data/reviews/red-dead-redemption-2.mdx
@@ -1,5 +1,5 @@
 ---
-title: The Last of Us Part II
+title: Red Dead Redemption 2
 subtitle: Emotionally Shattering Journey
 excerpt: An emotionally shattering, thrilling adventure with a stunning and nuanced exploration of the strength and fragility of the human spirit.
 ratingScore: 10
