--- a/data/reviews/sandman.mdx
+++ b/data/reviews/sandman.mdx
@@ -1,5 +1,5 @@
 ---
-title: The Last of Us Part II
+title: Sandman
 subtitle: Emotionally Shattering Journey
 excerpt: An emotionally shattering, thrilling adventure with a stunning and nuanced exploration of the strength and fragility of the human spirit.
 ratingScore: 10
@@ -7,7 +7,7 @@ ratingMax: 10
 ratingComment: Must Play Experience
 backdrop: /images/articles/backdrops/the-last-of-us-part-2.jpg
 cover: /images/articles/images/tlou2-0.jpg
-category: Game
+category: Comic Book
 hidden: true
 ---
 
