--- a/data/reviews/spider-man-no-way-home.mdx
+++ b/data/reviews/spider-man-no-way-home.mdx
@@ -1,5 +1,5 @@
 ---
-title: The Last of Us Part II
+title: Spider-Man No Way Home
 subtitle: Emotionally Shattering Journey
 excerpt: An emotionally shattering, thrilling adventure with a stunning and nuanced exploration of the strength and fragility of the human spirit.
 ratingScore: 10
@@ -7,8 +7,8 @@ ratingMax: 10
 ratingComment: Must Play Experience
 backdrop: /images/articles/backdrops/the-last-of-us-part-2.jpg
 cover: /images/articles/images/tlou2-0.jpg
-category: Game
-hidden: true
+category: Movie
+hidden: false
 ---
 
 The Last of Us is one of the rare beloved games of the past decade that not only didn’t demand a sequel, but
