--- a/data/reviews/the-last-of-us.mdx
+++ b/data/reviews/the-last-of-us.mdx
@@ -1,5 +1,5 @@
 ---
-title: The Last of Us Part II
+title: The Last of Us Remastered
 subtitle: Emotionally Shattering Journey
 excerpt: An emotionally shattering, thrilling adventure with a stunning and nuanced exploration of the strength and fragility of the human spirit.
 ratingScore: 10
