--- a/data/reviews/the-witcher-3.mdx
+++ b/data/reviews/the-witcher-3.mdx
@@ -1,5 +1,5 @@
 ---
-title: The Last of Us Part II
+title: The Witcher 3 - Wild Hunt GOTY
 subtitle: Emotionally Shattering Journey
 excerpt: An emotionally shattering, thrilling adventure with a stunning and nuanced exploration of the strength and fragility of the human spirit.
 ratingScore: 10
