Made only TLOU2 Review public

--- a/data/reviews/the-last-of-us-part-ii.mdx
+++ b/data/reviews/the-last-of-us-part-ii.mdx
@@ -8,7 +8,7 @@ ratingComment: Must Play Experience
 backdrop: /images/articles/backdrops/the-last-of-us-part-2.jpg
 cover: /images/articles/images/tlou2-0.jpg
 category: Game
-hidden: true
+hidden: false
 ---
 
 The Last of Us is one of the rare beloved games of the past decade that not only didn’t demand a sequel, but
