Added Project Estimation Article

--- a/data/articles/case-study-coach.mdx
+++ b/data/articles/case-study-coach.mdx
@@ -7,7 +7,7 @@ category: Case Study
 readingTime: 10 min
 createdDate: March 13, 2022 18:30:00
 noHeader: true
-hidden: false
+hidden: true
 seoDescription: Coach is an ecommerce fashion brand active primarily in USA and Canada. They have an ecommerce website and its actively in development since 2019. They have close to 60,000 products in their dashboard and are looking for a faster user experience on their website. They use Salesforce Commerce Cloud (SFCC) to power their website.
 ---
 
