--- a/data/reviews/cyberpunk-2077.mdx
+++ b/data/reviews/cyberpunk-2077.mdx
@@ -1,5 +1,5 @@
 ---
-title: The Witcher 3 - Wild Hunt GOTY
+title: Cyberpunk 2077
 subtitle: Emotionally Shattering Journey
 excerpt: An emotionally shattering, thrilling adventure with a stunning and nuanced exploration of the strength and fragility of the human spirit.
 ratingScore: 10
@@ -8,7 +8,7 @@ ratingComment: Must Play Experience
 backdrop: /images/articles/backdrops/the-last-of-us-part-2.jpg
 cover: /images/articles/images/tlou2-0.jpg
 category: Game
-hidden: true
+hidden: false
 ---
 
 The Last of Us is one of the rare beloved games of the past decade that not only didn’t demand a sequel, but
