--- a/data/articles/case-study-pg-developers.mdx
+++ b/data/articles/case-study-pg-developers.mdx
@@ -7,7 +7,7 @@ category: Case Study
 readingTime: 15 min
 createdDate: March 17, 2022 18:30:00
 noHeader: true
-hidden: true
+hidden: false
 seoDescription: P&G is a multinational consumer goods corporation. Apart from their massive line of products, they also have a massive list of software projects. Believe me, I have seen their 4.2k repository list on GitHub which they switched to in 2019. Most of these projects were web apps and APIs, so they were running into a unique problem. Documentation for these applications was bundled inside their repositories if not hosted on a different service. To streamline the whole process of software development, they were looking for a web app where we can browse their APIs, view their documentation and test out some APIs. The solution we proposed was a one stop developer’s portal for their services.
 ---
 
