--- a/data/reviews/cyberpunk-2077.mdx
+++ b/data/reviews/cyberpunk-2077.mdx
@@ -1,99 +1,69 @@
 ---
 title: Cyberpunk 2077
-subtitle: Emotionally Shattering Journey
-excerpt: An emotionally shattering, thrilling adventure with a stunning and nuanced exploration of the strength and fragility of the human spirit.
-ratingScore: 10
+subtitle: A Futuristic Nail-Biting Adventure
+excerpt: Cyberpunk 2077 offers a unique adventure set in a beautiful Night City and is backed by a cast of great actor. Both actors and animators have worked hard to bring this game to life. But the poor gameplay loop always makes this game feel like a game of 2010s instead of 2020s.
+ratingScore: 7
 ratingMax: 10
-ratingComment: Must Play Experience
-backdrop: /images/articles/backdrops/the-last-of-us-part-2.jpg
-cover: /images/articles/images/tlou2-0.jpg
+ratingComment: Greatness behind Poor Gameplay
+backdrop: /images/articles/backdrops/cyberpunk-1.jpg
+cover: /images/articles/covers/cyberpunk.jpg
 category: Game
 hidden: false
 ---
 
-The Last of Us is one of the rare beloved games of the past decade that not only didn’t demand a sequel, but
-actively seemed to resist the idea of one. Its story is largely poignant because of how self-contained it
-is: not knowing what happened between Joel and Ellie after his fateful, final decision burned a mark into
-the brains of many who played it, and that open-ended question has lingered for years. But with The Last of
-Us Part 2, developer Naughty Dog rises to that challenge with not only a complex, profound story that gives
-it a reason to exist, but also deep and satisfying evolutions to the original’s third-person action/stealth
-gameplay.
+Cyberpunk 2077 is CD Project Red's new rendition into their RPG genre and this time we are in the future. Night city is ruled by companies, gangs, fixers and you are at the bottom of the chain. Even though, its set in the year 2077, it feels more like the year 2040 instead. Apart from the neon look and feel of the game, the gameplay feels pretty simple and is disappointing throughout. However, the disappointing gameplay is remedied by a nailbiting adventure.
 
-![The Last of Us Part II Screenshot 1](/images/articles/images/tlou2-1.jpg)
+![Cyberpunk Screenshot 1](/images/articles/images/cyberpunk-3.jpg)
 
-I can’t tell you much about some of Part 2’s best aspects, but not because I don’t want to – I’m bursting to
-talk with anyone about all the moving, uplifting, and heart-wrenching moments that have been replaying in my
-mind for days since I first beat this adventure. But doing so would strip away layers of the act of playing
-through Part 2 yourself, so I’ll speak about its story in largely general terms.
+## Concept
 
-One of Part 2’s biggest achievements is how it knowingly handles the weighted expectations that a sequel to
-one of the most heralded game stories of all time will inevitably carry with fans. It starts out seemingly
-simple, taking place about four years after the end of the original and setting an older, angrier, but
-still-immune Ellie on a quest for revenge that also hones in on the cycles of violence that can plague
-humanity as much as any infection. It knowingly leans into the tropes of the genre, such as guilt by
-association and the inevitable escalation of matching an eye for an eye and a tooth for a tooth. But those
-cliches are often subverted, playing into the expansive and not-so-straightforward path ahead.
+Soul Capture is a thing of the future where the souls of people can be stored on pendrive like biochips, basically offering immortality. It's cutting edge and hasn't hit the markets yet... so only the richest of the rich have it. The main questline is built around this concept which was easy to grasp but in action, I loved it.
 
-![The Last of Us Part II Screenshot 2](/images/articles/images/tlou2-2.png)
+And to support this narrative, there is a great cast of actors. Keanu Reeves (as Johnny Silverhand) was with us through the whole adventure including side quests which made the game that much awesome. Judy, Panam, Brendan, Rogue, Padre, and the list will go on. All of them were so memorable characters.
 
-# Something Much More Ambitious
+![Cyberpunk Screenshot 2](/images/articles/images/cyberpunk-5.jpg)
 
-From there, Ellie’s journey grows into something much more ambitious. Part 2 deftly handles a war on the
-streets of post-zombie-apocalypse Seattle, an expansive new cast of characters, and some gut-punch payoffs
-to the lingering emotions The Last of Us’ powerful ending left me stirring over for the last seven years.
-The Last of Us Part 2’s story is handled as masterfully as it was in the original.
+## Side Quests
 
-![The Last of Us Part II Screenshot 3](/images/articles/images/tlou2-3.png)
+The side quests can actually affect the main quest and you WILL have different endings based on the side quests you complete. And to be honest, I loved all the side quests I did. In fact, after completition I did some more side quests and the quality and effort put in them was sublime. CDPR really knows how to make RPGs and it shows.
 
-One of the most impactful ways Part 2 hearkens back to The Last of Us is how it asks you to identify and
-empathize with its characters, even when you almost certainly won’t always agree with their actions. In a
-medium often defined by giving us the power to choose what happens, The Last of Us and Part 2 concern
-themselves more with fully realized characters, asking us to take them as they are. Naughty Dog’s characters
-are indelible, which makes for incredibly powerful and challenging moments when you’re put in Ellie's shoes
-and asked to act out her whims yourself.
+![Cyberpunk Screenshot 3](/images/articles/images/cyberpunk-7.jpg)
 
-![The Last of Us Part II Screenshot 4](/images/articles/images/tlou2-4.png)
+## Gameplay Problem
 
-Part 2 is peppered with brutal, tragic, and poignant moments that hit harder because you take part in them,
-like it or not. Even if I disagreed with an action, I didn’t have a choice in the matter. I was asked to
-execute those actions or watch them happen without a chance to intercede, and to understand the reasoning
-behind them from their perspective. This dance between interactivity and an unalterable story made for a
-much more affecting experience than if I’d watched it all unfold in a movie.
+This game's gameplay is flawed. The car driving feels ancient. It is broken and the terrain doesn't help either. While you can mow down heavy trees, but your cars stops to a halt when they touch a small pole. Driving offshore? you will definitely get stopped to halt due to a small rock. The guns are basic and the worse of all is the skill tree. Due to this ancient gameplay, you cant but feel like its not really 2077 but 2010.
 
-# I Am Not Alone, Dear Loneliness
+![Cyberpunk Screenshot 4](/images/articles/images/cyberpunk-8.jpg)
 
-At the heart of it all is Ellie and her relationships. Ellie has had time to both find herself in the
-Jackson, Wyoming settlement she and her flawed father figure Joel call home and to reflect on the formative
-moments of her childhood. Uncovering what she knows and where she stands with Joel and his brother Tommy,
-is, at different times painful, amusing, and cathartic, but always in ways that are true to what I knew of
-these characters.
+## Good Morning, Night City
 
-Actors Troy Baker and Ashley Johnson once again bring so much heart and honesty in their performances as
-Joel and Ellie, respectively. Ellie is, without a doubt, the protagonist of Part 2, and Johnson brings
-nuance to every facet of Ellie’s character. Watching her grow up and wrestle with her past while still
-learning who she is as a 19-year-old (with all the usual desires and shortfalls 19-year-olds generally
-possess) is riveting at every step. She delivers some of the most human moments that Part 2 serves up.
+Night City is absolutely beautiful and one of the game's major features. It is full to its brim with good side quests and all of them have an affect on the night city and vice versa. We also explore the deserts and an industrial area which aren't as detailed as Night City.
 
-# Even when she does horrible things, her motivations are just as legitimate as Joel's or Ellie's.
+![Cyberpunk Screenshot 5](/images/articles/images/cyberpunk-12.jpg)
 
-Part 2 also introduces a great cast of supporting characters. Shannon Woodward is instantly charming as
-Dina, bringing a joy and kindness to a world where it’s otherwise so tough to find. Woodward shines in the
-smaller moments — a joking jab at Ellie here or an amusing aside about their Jackson homestead, there —
-offering so much dimension to the character. It’s also important to highlight, in spoiler-free terms, the
-incredible performance by Laura Bailey (known for her roles as Mary Jane from Marvel’s Spider-Man and Kait
-Diaz from Gears 5, among numerous others) as a new character. Like so many of The Last of Us’ characters,
-calling her good or evil would be reductive – we see her at her best and most relatable as well as her
-worst. It’s a testament to The Last of Us Part 2’s script by Neil Druckmann and Halley Gross and Bailey’s
-performance that even when she does horrible things, her motivations are just as legitimate and arguably
-noble as Joel’s or Ellie’s.
+But Night City was made by some people who do not know how to plan roads! Without the mini-map this game is unplayable because of how poorly the road navigation is. Poor car handling doesnt help either.
 
-# Verdict
+![Cyberpunk Screenshot 6](/images/articles/images/cyberpunk-13.jpg)
 
-The Last of Us Part 2 is a masterpiece worthy of its predecessor. Taking strides forward in nearly every
-way, Ellie steps into the spotlight and carries the sequel in a manner that feels like the culmination of
-everything that’s made Naughty Dog’s blockbuster storytelling so memorable since the original Uncharted on
-the PlayStation 3. It delivers a layered, emotionally shattering story on top of stealth and action gameplay
-that improves the first game’s mechanics while integrating a bit more of Uncharted’s greater mobility and
-action. But while Part 2 is a thrilling adventure, it still makes time for a stunning, nuanced exploration
-of the strength and fragility of the human spirit. The PlayStation 4 has one of its best exclusives in one
-of the generation’s best games.
+## It Bangs Hard!
+
+The music in this game is loud and true to its identity. Sometimes, I just drove around the open-world just vibing to the tunes on the radio. The sound design for gameplay is also solid and doesn't let the players down.
+
+![Cyberpunk Screenshot 7](/images/articles/images/cyberpunk-10.jpg)
+
+## Why Play Cyberpunk 2077
+
+1. Great Storyline
+2. Realistic Characters
+3. Beautiful Night City to Explore
+4. Great work by modellers and animators
+5. Amazing Side Quests
+6. Amazing Music
+
+## Why Not To Play Cyberpunk 2077
+
+You shouldn't play this game on hardware that is not PS5 or XBox Series X or graphic card higher than RTX 3060. This game is demanding and does not offer a good experience on any devices lower than I mentioned. Moreover, the game is not optimized, it doesn't look that good to warrant such a high entry point for hardware.
+
+This game will make you question what the developers were thinking when they designed the core gameplay loop. The guns, the cars, the traffic, the population are highly dissapointing.
+
+![Cyberpunk Screenshot 8](/images/articles/images/cyberpunk-9.jpg)
