Added The Last of Us Part II and Batman Coming Soon

--- a/data/reviews/the-last-of-us-part-ii.mdx
+++ b/data/reviews/the-last-of-us-part-ii.mdx
@@ -6,94 +6,53 @@ ratingScore: 10
 ratingMax: 10
 ratingComment: Must Play Experience
 backdrop: /images/articles/backdrops/the-last-of-us-part-2.jpg
-cover: /images/articles/images/tlou2-0.jpg
+cover: /images/articles/covers/the-last-of-us-part-2.jpg
 category: Game
 hidden: false
 ---
 
-The Last of Us is one of the rare beloved games of the past decade that not only didn’t demand a sequel, but
-actively seemed to resist the idea of one. Its story is largely poignant because of how self-contained it
-is: not knowing what happened between Joel and Ellie after his fateful, final decision burned a mark into
-the brains of many who played it, and that open-ended question has lingered for years. But with The Last of
-Us Part 2, developer Naughty Dog rises to that challenge with not only a complex, profound story that gives
-it a reason to exist, but also deep and satisfying evolutions to the original’s third-person action/stealth
-gameplay.
+The Last of Us is one of my favorite games because whenever I look at it, I see myself dreaming to become a game developer and start creating beautiful levels that exist in that game. I truly believe that I can if I put some time like 5+ years, can build a game that looks and feels like The Last of Us. When the gameplay trailer for The Last of Us Part II came, I couldn't believe the action and the density of that level. I just thought, its marketting and trailer just looked better than the actual game.
+
+## The Impossible Game
+
+When I look at the Last of Us Part II, I see an impossible game. I do not know how Naughty Dog pulled this off, but the game looks better than half of the cinematic movies I have seen. I beileve that games are currently the most immersive form of art. This game defines the industry standard which I have not seen topped by any other title till date even on a PS5. And it runs on a PS4. I played it on a base PS4; it runs amazing. And then I played it on PS5. When I played it on PS5, I was baffled, I really do not believe a person can create a game like this. Its a massive engineering project and the game shows the competency of Naughty Dog in the industry. The PS5 Patch is out and you have to experience it on a PS5.
+
+![The Last of Us Part II Screenshot 1](/images/articles/images/tlou2-4.jpg)
+
+## Bigger and Angrier Ellie
+
+The game is set 4 years after the events of the first one. Due to Joel's lie, the relationship of Joel and Ellie has degraded. You meet new character's like instantly charming Dina and Jesse. Instead of Joel, you play as Ellie and Naughty Dog puts you in her uncomfortably violent shoes. You will kill and the blood will spurt.
+
+![The Last of Us Part II Screenshot 1](/images/articles/images/tlou2-9.jpg)
+
+## A World Frozen in Time
+
+The game is mostly set in Seattle and nature has started to take back the cities. There are 3 factions in the game and all of them use the environment to their advantage uniquely. The player however, can take advantage of the level design to stealthily combat the enemies. The world is dense and each room of each building has a story to tell. The world of the Last of Us Part II has not progressed since the virus breakout and you really feel like living in an apocalyptic world. Some of the levels are actually mini-open world areas which I can't stress enough, how much I loved them. In my opinion, a Naughty Dog - The Last of Us Universe - Truly Open World Game - will be the best video game to be ever made until they release the next version. There is so much to miss and I am still discovering new areas in my third playthrough.
+
+![The Last of Us Part II Screenshot 1](/images/articles/images/tlou2-6.jpg)
+
+## Screams begging for mercy
+
+The sound of zombie apocalyptic Seattle is poignant. They nailed the music, but I am so much in love with actual sound design. People scream when you shoot them, and shout the names of their fallen comrades. The pump, blast, impact of shotgun, cock of the rifle, stretch of the bowstring sounds too authentic. That with Ashley Johnson's amazing songs, 3D audio makes this the best sounding game ever.
+
+The combat is brutal. Shotgun will blow your enemies to literal chunks and the bow can pierce the skull of enemies. Enemies are way more smarter and Ellie is way more vulnerable than ever. Molotovs, pipe bombs, trap mines so much at your disposal to keep the combat fun throughout the experience.
+
+![The Last of Us Part II Screenshot 1](/images/articles/images/tlou2-2.jpg)
+
+## Flashbacks are beautiful and I want more
+
+The flashbacks in this game are highlight points of your journey. They are beautiful and emotionally trigger the player every single time. They also cover what we missed during the 4 years between the Last of Us Part 1 and 2.
+
+![The Last of Us Part II Screenshot 1](/images/articles/images/tlou2-3.jpg)
+
+## What to expect
+
+The Last of Us Part II in its entirety is a very sad game. You will not be happy as Ellie or the player and it is due to its design. Naughty dog keeps pushing Ellie and you get to walk through the decisions that Ellie makes. The ending for me was perfect. It touches very sensitive topics and you get to experience them first hand with this game.
+
+![The Last of Us Part II Screenshot 1](/images/articles/images/tlou2-8.jpg)
+
+## Verdict
+
+The game left me gaping for weeks, trying to comprehend the deep meaning that this game has. The cycle of violence, forgiveness, love, jealousy, hate and revenge drive the game forward. "The PlayStation 4 has one of its finest exclusies in one of the generation's best game." - Jonathan Dornbrush
 
 ![The Last of Us Part II Screenshot 1](/images/articles/images/tlou2-1.jpg)
-
-I can’t tell you much about some of Part 2’s best aspects, but not because I don’t want to – I’m bursting to
-talk with anyone about all the moving, uplifting, and heart-wrenching moments that have been replaying in my
-mind for days since I first beat this adventure. But doing so would strip away layers of the act of playing
-through Part 2 yourself, so I’ll speak about its story in largely general terms.
-
-One of Part 2’s biggest achievements is how it knowingly handles the weighted expectations that a sequel to
-one of the most heralded game stories of all time will inevitably carry with fans. It starts out seemingly
-simple, taking place about four years after the end of the original and setting an older, angrier, but
-still-immune Ellie on a quest for revenge that also hones in on the cycles of violence that can plague
-humanity as much as any infection. It knowingly leans into the tropes of the genre, such as guilt by
-association and the inevitable escalation of matching an eye for an eye and a tooth for a tooth. But those
-cliches are often subverted, playing into the expansive and not-so-straightforward path ahead.
-
-![The Last of Us Part II Screenshot 2](/images/articles/images/tlou2-2.png)
-
-# Something Much More Ambitious
-
-From there, Ellie’s journey grows into something much more ambitious. Part 2 deftly handles a war on the
-streets of post-zombie-apocalypse Seattle, an expansive new cast of characters, and some gut-punch payoffs
-to the lingering emotions The Last of Us’ powerful ending left me stirring over for the last seven years.
-The Last of Us Part 2’s story is handled as masterfully as it was in the original.
-
-![The Last of Us Part II Screenshot 3](/images/articles/images/tlou2-3.png)
-
-One of the most impactful ways Part 2 hearkens back to The Last of Us is how it asks you to identify and
-empathize with its characters, even when you almost certainly won’t always agree with their actions. In a
-medium often defined by giving us the power to choose what happens, The Last of Us and Part 2 concern
-themselves more with fully realized characters, asking us to take them as they are. Naughty Dog’s characters
-are indelible, which makes for incredibly powerful and challenging moments when you’re put in Ellie's shoes
-and asked to act out her whims yourself.
-
-![The Last of Us Part II Screenshot 4](/images/articles/images/tlou2-4.png)
-
-Part 2 is peppered with brutal, tragic, and poignant moments that hit harder because you take part in them,
-like it or not. Even if I disagreed with an action, I didn’t have a choice in the matter. I was asked to
-execute those actions or watch them happen without a chance to intercede, and to understand the reasoning
-behind them from their perspective. This dance between interactivity and an unalterable story made for a
-much more affecting experience than if I’d watched it all unfold in a movie.
-
-# I Am Not Alone, Dear Loneliness
-
-At the heart of it all is Ellie and her relationships. Ellie has had time to both find herself in the
-Jackson, Wyoming settlement she and her flawed father figure Joel call home and to reflect on the formative
-moments of her childhood. Uncovering what she knows and where she stands with Joel and his brother Tommy,
-is, at different times painful, amusing, and cathartic, but always in ways that are true to what I knew of
-these characters.
-
-Actors Troy Baker and Ashley Johnson once again bring so much heart and honesty in their performances as
-Joel and Ellie, respectively. Ellie is, without a doubt, the protagonist of Part 2, and Johnson brings
-nuance to every facet of Ellie’s character. Watching her grow up and wrestle with her past while still
-learning who she is as a 19-year-old (with all the usual desires and shortfalls 19-year-olds generally
-possess) is riveting at every step. She delivers some of the most human moments that Part 2 serves up.
-
-# Even when she does horrible things, her motivations are just as legitimate as Joel's or Ellie's.
-
-Part 2 also introduces a great cast of supporting characters. Shannon Woodward is instantly charming as
-Dina, bringing a joy and kindness to a world where it’s otherwise so tough to find. Woodward shines in the
-smaller moments — a joking jab at Ellie here or an amusing aside about their Jackson homestead, there —
-offering so much dimension to the character. It’s also important to highlight, in spoiler-free terms, the
-incredible performance by Laura Bailey (known for her roles as Mary Jane from Marvel’s Spider-Man and Kait
-Diaz from Gears 5, among numerous others) as a new character. Like so many of The Last of Us’ characters,
-calling her good or evil would be reductive – we see her at her best and most relatable as well as her
-worst. It’s a testament to The Last of Us Part 2’s script by Neil Druckmann and Halley Gross and Bailey’s
-performance that even when she does horrible things, her motivations are just as legitimate and arguably
-noble as Joel’s or Ellie’s.
-
-# Verdict
-
-The Last of Us Part 2 is a masterpiece worthy of its predecessor. Taking strides forward in nearly every
-way, Ellie steps into the spotlight and carries the sequel in a manner that feels like the culmination of
-everything that’s made Naughty Dog’s blockbuster storytelling so memorable since the original Uncharted on
-the PlayStation 3. It delivers a layered, emotionally shattering story on top of stealth and action gameplay
-that improves the first game’s mechanics while integrating a bit more of Uncharted’s greater mobility and
-action. But while Part 2 is a thrilling adventure, it still makes time for a stunning, nuanced exploration
-of the strength and fragility of the human spirit. The PlayStation 4 has one of its best exclusives in one
-of the generation’s best games.
